--- a/config/default.yml
+++ b/config/default.yml
@@ -1,1 +1,6 @@
 # Write it!
+
+Inspecstyle/FirstCop:
+  Description: 'TODO: Write a description of the cop.'
+  Enabled: pending
+  VersionAdded: '0.82'
