--- a/config/default.yml
+++ b/config/default.yml
@@ -1,6 +1,4 @@
-# Write it!
-
 InspecStyle/FirstCop:
   Description: 'This first cop is a sandbox for exploring new InspecStyle cops.'
-  Enabled: pending
+  Enabled: true
   VersionAdded: '0.82'
