--- a/config/default.yml
+++ b/config/default.yml
@@ -1,3 +1,8 @@
+InSpecStyle/DeprecatedAttributes:
+  Description: 'TODO: Write a description of the cop.'
+  Enabled: pending
+  VersionAdded: '0.82'
+
 InspecStyle/FirstCop:
   Description: 'This first cop is a sandbox for exploring new InspecStyle cops.'
   Enabled: true
